Fixed alignment of work thumbnails

--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -40,6 +40,16 @@
 
     .work {
         width: $d-columns-6;
+
+        .flexbox & {
+            &:nth-child(3n) {
+                margin-right: $d-gutter / $d-siteWidth * 100%
+            }
+            &:nth-child(2n) {
+                margin-right: 0;
+            }
+
+        }
     }
 
     .client {
@@ -133,6 +143,12 @@
     }
     .work {
         width: 100%;
+        .flexbox & {
+            &:nth-child(n) {
+                margin-right: 0;
+            }
+
+        }
     }
     .work-details {
         padding: 0;
