--- a/src/sass/modules/_work.scss
+++ b/src/sass/modules/_work.scss
@@ -1,14 +1,29 @@
 .works {
     list-style-type: none;
     padding: 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    text-align: left;
+    text-align: justify;
+
+    .flexbox & {
+        text-align: left;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-start;
+    }
 }
 .work {
+    float: left;
     width: $d-columns-4;
-    margin: 0 0 4em;
+    margin: 0 0.9% 4em;
+
+    .flexbox & {
+        float: none;
+        margin: 0 $d-gutter / $d-siteWidth * 100%  4em 0;
+
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
+
+    }
 }
 .work-thumb {
     margin-bottom: 1em;
